--- a/index.html
+++ b/index.html
@@ -123,13 +123,34 @@
   </section>
   <!-- Testimonial -->
   <section id="testimonial">
-    <div class="container mt-12 mb-12">
 
-  </div>
+      <div class="my-5">
+        <div class="p-5 text-center bg-body-tertiary">
+          <div class="container py-5">
+            <h3 class="text-body-emphasis">"Mi donación no solo ayudó a los osos pardos, sino que también me llevó a experimentar la gratificación de contribuir directamente a su conservación en un viaje inolvidable."</h3>
+            <p class="col-lg-8 mx-auto lead">
+              - Juana Vélez
+            </p>
+          </div>
+          <div class="container imagesRow">
+            <div class="col-lg-3"> <img class="logo" src="./images/mashable.png"/></div>
+            <div class="col-lg-3"> <img class="logo" src="./images/bizinsider.png"/></div>
+            <div class="col-lg-3"> <img class="logo" src="./images/tnw.png"/></div>
+            <div class="col-lg-3"> <img class="logo" src="./images/techcrunch.png"/></div>
+        </div>
+        </div>
+        
+      </div>
   </section>
   <!-- Pricing -->
   <section id="pricing">
     <div class="container mt-5">
+      <div class="text-center">
+        <h3 class="display-5 text-body-emphasis">Cómo donar</h3>
+        <div class="col-lg-6 mx-auto">
+          <p class="lead mb-4">Ayuda a un oso en cualquier fecha del año</p>
+        </div>
+      </div>
       <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-sm">
@@ -185,7 +206,7 @@
     </div>
   </section>
   <!-- Footer -->
-  <section id="footer">
+  <section id="footer" class="gradient-background">
     <div class="container mt-5">
       <footer class="py-5">
         <div class="row">
