--- a/index.html
+++ b/index.html
@@ -133,10 +133,10 @@
             </p>
           </div>
           <div class="container imagesRow">
-            <div class="col-lg-3"> <img class="logo" src="./images/mashable.png"/></div>
-            <div class="col-lg-3"> <img class="logo" src="./images/bizinsider.png"/></div>
-            <div class="col-lg-3"> <img class="logo" src="./images/tnw.png"/></div>
-            <div class="col-lg-3"> <img class="logo" src="./images/techcrunch.png"/></div>
+            <div class="col-12 col-lg-3"> <img class="logo" src="./images/mashable.png"/></div>
+            <div class="col-12 col-lg-3"> <img class="logo" src="./images/bizinsider.png"/></div>
+            <div class="col-12 col-lg-3"> <img class="logo" src="./images/tnw.png"/></div>
+            <div class="col-12 col-lg-3"> <img class="logo" src="./images/techcrunch.png"/></div>
         </div>
         </div>
         
