--- a/index.html
+++ b/index.html
@@ -132,11 +132,13 @@
               - Juana Vélez
             </p>
           </div>
-          <div class="container imagesRow">
+          <div class="container">
+            <div class="row">
             <div class="col-12 col-lg-3"> <img class="logo" src="./images/mashable.png"/></div>
             <div class="col-12 col-lg-3"> <img class="logo" src="./images/bizinsider.png"/></div>
             <div class="col-12 col-lg-3"> <img class="logo" src="./images/tnw.png"/></div>
             <div class="col-12 col-lg-3"> <img class="logo" src="./images/techcrunch.png"/></div>
+          </div>
         </div>
         </div>
         
