--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                 <li>Recibirás un oso pardo de peluche exclusivo</li>
                 <li>Puedes participar en el concurso</li>
               </ul>
-              <button type="button" class="w-100 btn btn-lg btn-outline-primary">Sign up for free</button>
+              <button type="button" class="w-100 btn btn-lg btn-outline-primary">Quiero donar ahora</button>
             </div>
           </div>
         </div>
@@ -183,7 +183,7 @@
                 <li>Recibirás actualizaciones regulares sobre nuestro trabajo</li>
                 <li>Oso de peluche exclusivo</li>
               </ul>
-              <button type="button" class="w-100 btn btn-lg btn-primary">Contact us</button>
+              <button type="button" class="w-100 btn btn-lg btn-primary">Quiero ser miembro</button>
             </div>
           </div>
         </div>
@@ -199,7 +199,7 @@
                 <li>Recibirás un certificado oficial de reconocimiento de defensor de la fauna</li>
                 <li>Oso de peluche exclusivo</li>
               </ul>
-              <button type="button" class="w-100 btn btn-lg btn-primary">Get started</button>
+              <button type="button" class="w-100 btn btn-lg btn-primary">Haz la diferencia</button>
             </div>
           </div>
         </div>
